# matfree.app

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: ARCHITECTURE.md
engine/: CMakeLists.txt
engine/examples/: functions_demo.m  hello.m
engine/python/: setup.py
engine/python/matfree/: __init__.py  bindings.cpp
engine/src/: main.cpp
engine/src/core/: ast.h  builtins.cpp  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  value.cpp  value.h
engine/src/repl/: repl.cpp
engine/tests/: test_main.cpp
examples/: fibonacci.m  functions_demo.m  hello.m  matrix_demo.m
public/: robots.txt  sitemap.xml
python/: setup.py
python/matfree/: __init__.py  bindings.cpp
src/: main.cpp
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/app/notebook/: layout.tsx  page.tsx
src/app/playground/: layout.tsx  page.tsx  playground.module.css
src/components/: AIAssistant.tsx  Autocomplete.tsx  CommandPalette.tsx  FileTree.tsx  MathEquationEditor.tsx  Plot3D.tsx  PlotCanvas.tsx  VariableExplorer.tsx
src/core/: ast.h  builtins.cpp  builtins.h  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h  value.cpp  value.h
src/engine/: advanced.ts  ast.ts  builtins.ts  debugger.ts  environment.ts  help.ts  index.ts  interpreter.ts  lexer.ts  parser.ts  plot.ts  scientific.ts  symbolic.ts  token.ts  transpiler.ts  value.ts
src/engine/__tests__/: mathCorrectness.test.ts
src/lib/: notebookStorage.ts
src/repl/: repl.cpp  repl.h
